sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
    for (i <- getNombreValeur()-2 to 0 by -1; j <- 0 to i-1) {
      if (!plusPetit(i,i+1)) {
        echange(i,i+1)
      }
    }
}
  
